Fix horizontal overflow

--- a/themes/uilite-pro/assets/main.scss
+++ b/themes/uilite-pro/assets/main.scss
@@ -38,7 +38,7 @@ a {
 
 .main-content {
   position: relative;
-  overflow: visible;
+  overflow: hidden;
   width: 60%;
   max-width: 1200px;
   margin-left: 40%;
@@ -480,11 +480,11 @@ $bar-spacing: 8px;
 .hamburger-menu.animate:after {
   top: 0;
   transform: rotate(45deg);
-  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1);;
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .hamburger-menu.animate:before {
   bottom: 0;
   transform: rotate(-45deg);
-  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1);;
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1);
 }
